--- a/css.css
+++ b/css.css
@@ -13,7 +13,7 @@ font-family: "Montserrat", sans-serif; margin:0;}
 @media  screen and (min-width:550px) {  .dev{padding:20px 60px 20px 60px; justify-content:space-between;} .links{ display:none;} 
 .tpc{display:none;}  }
 @media screen and (min-width:850px) { .dev{padding:40px 100px 20px 100px; } .links{display:inline;} .tpc{display:inline;} 
-.hamburger{display:none;}  }
+.hamburger{display:none;} .nam{font-size:small;} }
 
 
 .head{ padding:30px 50px 40px 50px; }
