--- a/css.css
+++ b/css.css
@@ -4,53 +4,60 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .webb{}
  a{color:white; text-decoration:none;}
 
-.dev{display: flex; flex-direction:row; justify-content:space-between; align-items:center;
-max-width:85%; padding:20px 100px 20px 150px;}
+.dev{padding:40px 50px 30px 50px; display:flex; justify-content:space-between;}
 .nam{letter-spacing:-1px;}
-.links{display:inline;}
+.links{display:none;}
 .links a{color:white; text-decoration:none; padding:10px;}
-.tpc{ background-color: yellow; padding: 6px; color: black;}
-@media (max-width: 992px) { .links, .tpc {display:none;} .dev, {max-width:100%; 
-    display:flex; justify-content:center;} }
+.tpc{ background-color: yellow; padding: 6px; color: black; display:none;}
+.hamburger{float:right;}
+@media (min-width:768px) {  .dev{padding:20px 60px 20px 60px; justify-content:space-between;} .links{ display:none;} 
+.tpc{display:none;}  }
+@media screen and (min-width:992px) { .dev{padding:40px 100px 20px 100px; } .links{display:inline;} .tpc{display:inline;} 
+.hamburger{display:none;}  }
 
 
-.header{ padding:20px 100px 20px 150px;}
-.head h4{font-size: 40px; max-width:600px; margin-bottom:0px;}
-.head p{max-width:450px; }
+.head{ padding:30px 50px 40px 50px; }
+.head h4{font-size: 30px; margin-bottom:0px;}
+.head p{font-size:15px; line-height:1.6;}
+@media screen and  (min-width:768px) { .head{ padding: 5px 60px 10px 60px;} .head h4{ font-size: 55px;}  .head p{ font-size:20px;}      }
+@media (min-width:992px) { .head{ padding: 10px 100px 20px 100px; max-width:800px;} .head h4{font-size: xxx-large;}
+.head p{font-size: 17px;} }
 
-.logo{ padding:20px 100px 20px 150px;}
-.tpg{ display:grid; grid-template-columns:auto auto auto auto auto auto; gap:10px; justify-content:space-between;
- margin:5px 0px 20px 0px; max-width:85%;}
-.logos { align-items:center; }
-@media(max-width:992px) {.tpg {grid-template-columns:auto auto auto; justify-content:space-between; max-width:450px;} 
-.logos{ align-items:center; }}
-@media (max-width:540px) {.tpg {display:grid; grid-template-columns:auto auto; justify-content:center;}}
+.logo{ display:flex; flex-wrap:wrap; justify-content:center; width:85%; margin:auto; margin-bottom:65px;}
+.logos { align-items:center; padding:11px; }
+@media screen and (min-width:768px) { .logo{ justify-content:space-around; margin:auto;} .logos { align-items:center; padding-right:45px; padding-left:45px; } }
+@media (min-width:992px) {  .logo{ padding: 10px 100px 20px 100px; width:100%; justify-content:space-between;  }
+ .logos{ padding:0px;}  }
 
-.web{padding:20px 100px 20px 150px;}
-.pics{display:grid;  column-gap: 20px; justify-content:space-between; grid-template-columns: 1fr 1fr; max-width:100%;
-padding:5px;}	
-.img{max-width:360px;}
-
-.pics p {font-size:13px; line-height:1.6; max-width:360px; }
-.pics a{font-size:25px;}
-@media (max-width:992px) {.pics{grid-template-columns:auto; max-width:100px;} .img{ max-width:490px;} 
-.pics p{max-width:460px;}}
-@media (max-width:540px) { .pics{grid-template-columns:auto; max-width:50px;} .img{ max-width:270px;} 
-.pics p{max-width:270px;}}
+.web{padding:10px 50px 20px 50px;}
+.pics{display:flex; flex-direction:column;}	
+.img{width:100%; margin-bottom:10px;}
+.sp{ flex:1; margin-bottom:50px;}
+.pics p {font-size:15px; line-height:1.6;  }
+.pics a{font-size:30px;}
+@media screen and (min-width:768px) {.pics p{ font-size:20px; }  .pics a{font-size:35px;} } 
+@media (min-width:992px){.web {padding:10px 100px 20px 100px;} .pics{ flex-direction:row; gap:50px;} .pics p {font-size:15px; line-height:1.6;  }
+.pics a{font-size:30px;} }
 
 
 .words{background-color:#2e3038;  }
- .first{display:grid; justify-content:space-between; grid-template-columns: 1fr 1fr; max-width:100%; align-items:center;
- align-content:center; gap: 0 40px; padding:20px 100px 20px 150px;  }
- p{font-size:13px; max-width:360px;}
- h2{font-size:25px; max-width:360px;}
-@media (max-width:992px) {.first{grid-template-columns:1fr;} .he p, h2{max-width:460px;}} 
+ .first{display:flex; flex-direction:column; padding: 20px 60px 20px 60px; }
+.he p{font-size:15px; line-height:1.6;}
+.he h2{font-size:30px; }
+@media screen and (min-width:768px) { .he p{font-size:20px;} .he h2{font-size:35px; }  }
+@media (min-width:992px) { .first{ flex-direction:row; gap:50px;  padding:10px 100px 20px 100px; 
+ justify-content:space-between;}  .he2{ margin-left: 22px; margin-top: 10px;} .he h2{font-size:30px; } .he p{font-size:15px; line-height:1.6;} }
 
-.second{ padding:20px 100px 20px 150px;}
-.second p{max-width:360px;}
+
+.second{ padding:20px 50px 20px 50px;}
+.second p{font-size:15px; line-height:1.6; margin-top:0px;}
+.second h2{font-size:30px; margin-bottom:0px;}
 .get{background-color: yellow; padding: 6px; color: black; }
+@media screen and (min-width:768px) {.second p{font-size:20px; } .second h2{font-size:35px; } }
+@media (min-width:992px) { .second{ padding:40px 100px 40px 100px; }  .second h2{max-width:550px; font-size:30px; }  .second p{max-width:400px; font-size:15px; }   }
 
-.last{background-color: #2e3038;  }
-.lastt{display:flex; justify-content:space-between; padding:0px 100px 0px 150px; max-width:100%; align-items:center;
+.last{background-color: #2e3038;  padding:0px 50px 0px 50px; }
+.lastt{display:flex; justify-content:space-between;  align-items:center;
  align-content:center; }
 .socials img{margin-right:5px; border-radius:50%;}
+@media (min-width:992px) {  .last{padding:0px 100px 0px 100px; }    } 
