--- a/css.css
+++ b/css.css
@@ -19,7 +19,8 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .head{ padding:30px 50px 40px 50px; }
 .head h4{font-size: 30px; margin-bottom:0px;}
 .head p{font-size:15px; line-height:1.6;}
-@media screen and  (min-width:550px) { .head{ padding: 5px 60px 10px 60px;} .head h4{ font-size: 55px;}  .head p{ font-size:20px;}      }
+@media screen and  (min-width:550px) { .head{ padding: 5px 60px 10px 60px;} .head h4{ font-size: 55px;}      }
+
 @media screen and (min-width:850px) { .head{ padding: 10px 100px 20px 100px; max-width:800px;} .head h4{font-size:30px;} }
 
 
