--- a/css.css
+++ b/css.css
@@ -21,7 +21,7 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .head p{font-size:15px; line-height:1.6;}
 @media screen and  (min-width:550px) { .head{ padding: 5px 60px 10px 60px;} .head h4{ font-size: 55px;}      }
 
-@media screen and (min-width:850px) { .head{ padding: 10px 100px 20px 100px; max-width:800px;} .head h4{font-size:30px;} }
+@media screen and (min-width:850px) { .head{ padding: 10px 100px 20px 100px; max-width:800px;} .head h4{font-size:30px;} .head p{font-size:10px;} }
 
 
 .logo{ display:flex; flex-wrap:wrap; justify-content:center; width:85%; margin:auto; margin-bottom:65px;}
