--- a/css.css
+++ b/css.css
@@ -21,7 +21,7 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .head p{font-size:15px; line-height:1.6;}
 @media screen and  (min-width:550px) { .head{ padding: 5px 60px 10px 60px;} .head h4{ font-size: 55px;}      }
 
-@media screen and (min-width:850px) { .head{ padding: 10px 100px 20px 100px; max-width:800px;} .head h4{font-size:30px;} .head p{font-size:10px; color:blue;} }
+@media screen and (min-width:850px) { .head{ padding: 10px 100px 20px 100px; max-width:800px;} .head h4{font-size:30px;} .head p{font-size:8px; } }
 
 
 .logo{ display:flex; flex-wrap:wrap; justify-content:center; width:85%; margin:auto; margin-bottom:65px;}
@@ -37,7 +37,7 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .pics p {font-size:15px; line-height:1.6;  }
 .pics a{font-size:30px;}
 @media screen and (min-width:550px) {.pics p{ font-size:20px; }  .pics a{font-size:35px;} } 
-@media screen and (min-width:850px){.web {padding:10px 100px 20px 100px;} .pics{ flex-direction:row; gap:50px;} .pics p {font-size:15px; line-height:1.6;  }
+@media screen and (min-width:850px){.web {padding:10px 100px 20px 100px;} .pics{ flex-direction:row; gap:50px;} .pics p {font-size:8px; line-height:1.6;  }
 .pics a{font-size:30px;} }
 
 
@@ -55,7 +55,7 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .second h2{font-size:30px; margin-bottom:0px;}
 .get{background-color: yellow; padding: 6px; color: black; }
 @media screen and (min-width:550px) {.second p{font-size:20px; } .second h2{font-size:35px; } }
-@media screen and (min-width:850px) { .second{ padding:40px 100px 40px 100px; }  .second h2{max-width:550px; font-size:30px; }  .second p{max-width:400px; font-size:15px; }   }
+@media screen and (min-width:850px) { .second{ padding:40px 100px 40px 100px; }  .second h2{max-width:550px; font-size:30px; }  .second p{max-width:400px; font-size: 8px; }   }
 
 .last{background-color: #2e3038;  padding:0px 50px 0px 50px; }
 .lastt{display:flex; justify-content:space-between;  align-items:center;
