--- a/css.css
+++ b/css.css
@@ -10,9 +10,11 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .links a{color:white; text-decoration:none; padding:10px;}
 .tpc{ background-color: yellow; padding: 6px; color: black; display:none;}
 .hamburger{float:right;}
-@media  screen and (min-width:550px) {  .dev{padding:20px 60px 20px 60px; justify-content:space-between;} .links{ display:none;} 
+@media  screen and (min-width:550px) {  .dev{padding:20px 60px 20px 60px; justify-content:space-between;} 
+.links{ display:none;} 
 .tpc{display:none;}  }
-@media screen and (min-width:850px) { .dev{padding:40px 70px 20px 70px; } .links{display:inline;} .tpc{display:inline;} 
+@media screen and (min-width:850px) { .dev{padding:40px 70px 20px 70px; } .links{display:inline;}
+ .tpc{display:inline;} 
 .hamburger{display:none;} .nam{font-size:small;} }
 
 
@@ -20,7 +22,8 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .head h4{font-size: 30px; margin-bottom:0px;}
 .head p{font-size:15px; line-height:1.6;}
 @media screen and  (min-width:550px) { .head{ padding: 5px 60px 10px 60px;} .head h4{ font-size: 55px;}  }
-@media screen and (min-width:850px) { .head{ padding: 10px 70px 20px 70px; max-width:750px;} .head h4{font-size:25px;} .head p{font-size:10px; max-width:650px; } }
+@media screen and (min-width:850px) { .head{ padding: 10px 70px 20px 70px; max-width:750px;} 
+.head h4{font-size:30px;} .head p{font-size:15px; max-width:650px; } }
 
 
 .logo{ display:flex; flex-wrap:wrap; justify-content:center; width:85%; margin:auto; margin-bottom:65px;}
