--- a/css.css
+++ b/css.css
@@ -23,7 +23,7 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .head p{font-size:15px; line-height:1.6;}
 @media screen and  (min-width:550px) { .head{ padding: 5px 60px 10px 60px;} .head h4{ font-size: 55px;}  }
 @media screen and (min-width:850px) { .head{ padding: 10px 70px 20px 70px; max-width:750px;} 
-.head h4{font-size:large;} .head p{font-size:small; max-width:650px; } }
+.head h4{font-size:larger;} .head p{font-size:large; max-width:650px; } }
 
 
 .logo{ display:flex; flex-wrap:wrap; justify-content:center; width:85%; margin:auto; margin-bottom:65px;}
