--- a/css.css
+++ b/css.css
@@ -23,7 +23,7 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .head p{font-size:15px; line-height:1.6;}
 @media screen and  (min-width:550px) { .head{ padding: 5px 60px 10px 60px;} .head h4{ font-size: 55px;}  }
 @media screen and (min-width:850px) { .head{ padding: 10px 70px 20px 70px; max-width:750px;} 
-.head h4{font-size:3vw;} .head p{font-size:0.5vw; max-width:650px; } }
+.head h4{font-size:3vw;} .head p{font-size:1vw; max-width:500px; } }
 
 
 .logo{ display:flex; flex-wrap:wrap; justify-content:center; width:85%; margin:auto; margin-bottom:65px;}
@@ -39,8 +39,9 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .pics p {font-size:15px; line-height:1.6;  }
 .pics a{font-size:30px;}
 @media screen and (min-width:550px) {.pics p{ font-size:20px; }  .pics a{font-size:35px;} } 
-@media screen and (min-width:850px){.web {padding:10px 70px 20px 70px;} .pics{ flex-direction:row; gap:50px;} .pics p{font-size:10px; line-height:1.6;  }
-.pics a{font-size:20px;} }
+@media screen and (min-width:850px){.web {padding:10px 70px 20px 70px;} .pics{ flex-direction:row; gap:50px;}
+ .pics p{font-size:1vw; line-height:1.6;  }
+.pics a{font-size:2vw;} }
 
 
 .words{background-color:#2e3038;  }
@@ -49,7 +50,8 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .he h2{font-size:30px; }
 @media screen and (min-width:550px) { .he p{font-size:20px;} .he h2{font-size:35px; }  }
 @media  screen and (min-width:850px) { .first{ flex-direction:row; gap:50px;  padding:10px 70px 20px 70px; 
- justify-content:space-between;}  .he2{ margin-left: 22px; margin-top: 10px;} .he h2{font-size:20px; } .he p{font-size:10px; line-height:1.6;} }
+ justify-content:space-between;}  .he2{ margin-left: 22px; margin-top: 10px;} .he h2{font-size:2vw; } 
+ .he p{font-size:1vw; line-height:1.6;} }
 
 
 .second{ padding:10px 20px 20px 20px;}
@@ -57,7 +59,8 @@ font-family: "Montserrat", sans-serif; margin:0;}
 .second h2{font-size:30px; margin-bottom:0px;}
 .get{background-color: yellow; padding: 6px; color: black; }
 @media screen and (min-width:550px) {.second p{font-size:20px; } .second h2{font-size:35px; } }
-@media screen and (min-width:850px) { .second{ padding:40px 70px 40px 70px; }  .second h2{max-width:550px; font-size:20px; }  .second p{max-width:400px; font-size: 10px; }   }
+@media screen and (min-width:850px) { .second{ padding:40px 70px 40px 70px; } 
+ .second h2{max-width:550px; font-size:2vw; }  .second p{max-width:400px; font-size: 1vw; }   }
 
 .last{background-color: #2e3038;  padding:0px 20px 0px 20px; }
 .lastt{display:flex; justify-content:space-between;  align-items:center;
